# fitpackpp

./: CMakeLists.txt
fitpackpp/: BSplineCurve.cpp  BSplineCurve.h  BSplineParCurve.cpp  BSplineParCurve.h  BSplineSurface.cpp  BSplineSurface.h
test/: fitpack_tests.cpp
